[tool.poetry]
name = "ratatouille"
version = "0.1.0"
description = ""
authors = ["Patrik Dvořáček <patrik@dvoracek.dev>"]
readme = "README.md"

[tool.ruff]
select = ["ALL"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
